# llm-spotify

./: .env.example  .gitignore  Makefile  README.md  eda-embed.ipynb  pyproject.toml
data/: eval_generated_questions.csv  qa_generated_sample.json  rag_chunk_200_embeddings_jina-embeddings-v2-base-en_rerank_False_reader-model_HuggingFaceH4~zephyr-7b-beta.json  sample_context.py
llm_spotify/: app.py  config.py  data_extraction.py  embeddings.py  evaluation.py  indexing.py  prompt.py  rag.py  reader.py  rerank.py
notebooks/: rag-development.ipynb
